# ChangeLog for kde-base/kdeaddons
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/ChangeLog,v 1.172 2006/06/03 10:50:22 gmsoft Exp $

  03 Jun 2006; Guy Martin <gmsoft@gentoo.org> kdeaddons-3.5.2-r1.ebuild:
  Stable on hppa.

*kdeaddons-3.5.3 (02 Jun 2006)

  02 Jun 2006; Stefan Schweizer <genstef@gentoo.org>
  +kdeaddons-3.5.3.ebuild:
  version bump

  01 Jun 2006; Thomas Cort <tcort@gentoo.org> kdeaddons-3.5.2-r1.ebuild:
  Stable on alpha wrt Bug #132213.

  30 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  kdeaddons-3.5.2-r1.ebuild:
  Stable on amd64 wrt bug #132213

  30 May 2006; Joseph Jezak <josejx@gentoo.org> kdeaddons-3.5.2-r1.ebuild:
  Marked ppc stable for bug #132213.

  29 May 2006; Jason Wever <weeve@gentoo.org> kdeaddons-3.5.2-r1.ebuild:
  Stable on SPARC wrt bug #132213.

  29 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  -kdeaddons-3.4.1.ebuild, -kdeaddons-3.4.2.ebuild, -kdeaddons-3.5.2.ebuild:
  Drop old versions.

  26 May 2006; Markus Rothe <corsair@gentoo.org> kdeaddons-3.5.2-r1.ebuild:
  Stable on ppc64

  26 May 2006; Joshua Jackson <tsunam@gentoo.org> kdeaddons-3.5.2-r1.ebuild:
  Stable on x86; bug #132213

  20 May 2006; <psi29a@gentoo.org> kdeaddons-3.5.2-r1.ebuild:
  added to ~mips for testing

  05 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  -kdeaddons-3.5.0.ebuild, -kdeaddons-3.5.1.ebuild:
  Remove 3.5.0 and 3.5.1 monolithic ebuilds.

  03 Apr 2006; Aron Griffis <agriffis@gentoo.org> kdeaddons-3.4.3.ebuild:
  Mark 3.4.3 stable on ia64

*kdeaddons-3.5.2-r1 (03 Apr 2006)

  03 Apr 2006; Carsten Lohrke <carlo@gentoo.org>
  +files/konq-plugins-3.5.2-arkplugin-crash-fix.diff,
  +kdeaddons-3.5.2-r1.ebuild:
  Fix crash in Konqueror Ark plugin, KDE bug #113585.

*kdeaddons-3.5.2 (25 Mar 2006)

  25 Mar 2006; Dan Armak <danarmak@gentoo.org> +kdeaddons-3.5.2.ebuild:
  KDE 3.5.2. Not yet released upstream, and so package.masked for now.
