@@ -30,14 +30,14 @@ EBUILD kdeaddons-3.5.2-r1.ebuild 1234 RMD160 b3b00e18d5ddb199edd513c5c3fb2602df5
 MD5 0171ae8ecd2021fb4b02036913ea2f99 kdeaddons-3.5.2-r1.ebuild 1234
 RMD160 b3b00e18d5ddb199edd513c5c3fb2602df56ca39 kdeaddons-3.5.2-r1.ebuild 1234
 SHA256 9aaf520331694cce84e03ec9e1bff3f2e70b155a7aae15e62c587700768e7d3c kdeaddons-3.5.2-r1.ebuild 1234
-EBUILD kdeaddons-3.5.3.ebuild 1172 RMD160 b7661842530a0d11a1d99e1426506d2eb41aedfd SHA1 9134d196f059c285d16d0270f50f428b9adc6378 SHA256 4512e00eb83ea8a435c649e54b4efe6e314a241d5a5b9723f6685e46f6997e72
-MD5 49407cd00eb1ecfdb597c8dd254d8996 kdeaddons-3.5.3.ebuild 1172
-RMD160 b7661842530a0d11a1d99e1426506d2eb41aedfd kdeaddons-3.5.3.ebuild 1172
-SHA256 4512e00eb83ea8a435c649e54b4efe6e314a241d5a5b9723f6685e46f6997e72 kdeaddons-3.5.3.ebuild 1172
-MISC ChangeLog 22004 RMD160 a1b2fed8c9a1fbf36f083ab22f706d80251cd151 SHA1 79d8f6d828a447813c06641f22fa737ac853ad9a SHA256 b3ca86b650d3b7d2c5514a019272e0f5f4ee65333fc6a663a1dbbd1a745358e6
-MD5 c7fb238c87d8cc0807b7a759fc98bd89 ChangeLog 22004
-RMD160 a1b2fed8c9a1fbf36f083ab22f706d80251cd151 ChangeLog 22004
-SHA256 b3ca86b650d3b7d2c5514a019272e0f5f4ee65333fc6a663a1dbbd1a745358e6 ChangeLog 22004
+EBUILD kdeaddons-3.5.3.ebuild 942 RMD160 3dd9faaa335dbb7bba6853ae0d7ce872085a884e SHA1 355c527d3cc9515eace9d653772d76c69800af54 SHA256 74cb291b801345ba56e57cff007e63b9d11fac6227d7d21152f299aa5c26fa07
+MD5 f63abeaa4c7dc961823db48d73b16686 kdeaddons-3.5.3.ebuild 942
+RMD160 3dd9faaa335dbb7bba6853ae0d7ce872085a884e kdeaddons-3.5.3.ebuild 942
+SHA256 74cb291b801345ba56e57cff007e63b9d11fac6227d7d21152f299aa5c26fa07 kdeaddons-3.5.3.ebuild 942
+MISC ChangeLog 22097 RMD160 bf85b71037a59019e434927cddbeafb9d38123f1 SHA1 0865376c792be5ad0f331790ebfd905abab4c37b SHA256 ca8baa95472e25153c59bd3473f0f4bb245f5481308039d8c48c88f76bfc6c7b
+MD5 418ccde039405c9038e17f40737962a6 ChangeLog 22097
+RMD160 bf85b71037a59019e434927cddbeafb9d38123f1 ChangeLog 22097
+SHA256 ca8baa95472e25153c59bd3473f0f4bb245f5481308039d8c48c88f76bfc6c7b ChangeLog 22097
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
