@@ -1,10 +1,10 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/kdeaddons-3.5.3.ebuild,v 1.1 2006/06/02 19:47:18 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/kdeaddons-3.5.3.ebuild,v 1.2 2006/06/12 22:26:33 carlo Exp $
 
-inherit kde-dist
+inherit db-use kde-dist
 
-DESCRIPTION="KDE addon modules: plugins for konqueror, noatun etc."
+DESCRIPTION="KDE addon modules: Plugins for Konqueror, Noatun,..."
 
 KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86"
 IUSE="arts berkdb sdl xmms"
@@ -15,21 +15,16 @@ DEPEND="~kde-base/kdepim-${PV}
 	arts? ( ~kde-base/arts-${PV} )
 	sdl? ( >=media-libs/libsdl-1.2 )
 	xmms? ( media-sound/xmms )
-	berkdb? ( || ( =sys-libs/db-4.3*
-	               =sys-libs/db-4.2* ) )
+	berkdb? ( =sys-libs/db-4* )
 	!kde-misc/metabar"
+RDEPEND==${DEPEND}
 
 src_compile() {
 	local myconf="$(use_with sdl) $(use_with xmms)"
 
 	if use berkdb; then
-		if has_version "=sys-libs/db-4.3*"; then
-			myconf="${myconf} --with-berkeley-db --with-db-lib=db_cxx-4.3
-			        --with-extra-includes=/usr/include/db4.3"
-		elif has_version "=sys-libs/db-4.2*"; then
-			myconf="${myconf} --with-berkeley-db --with-db-lib=db_cxx-4.2
-			        --with-extra-includes=/usr/include/db4.2"
-		fi
+		myconf="${myconf} --with-berkeley-db --with-db-lib=$(db_libname)
+			--with-extra-includes=${ROOT}$(db_includedir)"
 	else
 		myconf="${myconf} --without-berkeley-db"
 	fi
