@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdeaddons
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/ChangeLog,v 1.172 2006/06/03 10:50:22 gmsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/ChangeLog,v 1.173 2006/06/12 22:26:33 carlo Exp $
+
+  12 Jun 2006; Carsten Lohrke <carlo@gentoo.org> kdeaddons-3.5.3.ebuild:
+  Fix bug #136299.
 
   03 Jun 2006; Guy Martin <gmsoft@gentoo.org> kdeaddons-3.5.2-r1.ebuild:
   Stable on hppa.
